Change button colours

--- a/css/main.css
+++ b/css/main.css
@@ -11,3 +11,27 @@ div {
   padding: .5rem;
   text-align: center;
 }
+
+.btn {
+  padding: .4em .75em .3em;
+  border-radius: 8px;
+  text-decoration: none;
+  color: #fff;
+  background-color: #333;
+}
+
+.btn-subtle {
+  background-color: #ccc;
+}
+
+.btn-ghost {
+  border-width: 3px;
+  border-style: solid;
+  border-color: #000;
+  color: #000;
+  background-color: #fff;
+}
+
+.btn-warning {
+  background-color: #f33;
+}
