--- a/css/main.css
+++ b/css/main.css
@@ -16,12 +16,21 @@ div {
   padding: .4em .75em .3em;
   border-radius: 8px;
   text-decoration: none;
+  font-size: 1.125rem;
   color: #fff;
   background-color: #333;
 }
 
+.btn:hover {
+  background-color: #000;
+}
+
 .btn-subtle {
   background-color: #ccc;
+}
+
+.btn-subtle:hover {
+  background-color: #666;
 }
 
 .btn-ghost {
@@ -32,6 +41,23 @@ div {
   background-color: #fff;
 }
 
+.btn-ghost:hover {
+  background-color: #666;
+  border-style: none;
+}
+
 .btn-warning {
   background-color: #f33;
+}
+
+.btn-warning:hover {
+  background-color: #933;
+}
+
+.btn-small {
+  font-size: .875rem;
+}
+
+.btn-big {
+  font-size: 1.5rem;
 }
